# PigeonEngine

./: .gitattributes  .gitignore  CMakeLists.txt  GenerateProjectFiles.bat  Jolt.vcxproj  Jolt.vcxproj.filters  LICENSE  MyD3D11.sln  MyD3D11.vcxproj  MyD3D11.vcxproj.filters  PigeonEngine.sln  PigeonEngine.vcxproj  PigeonEngine.vcxproj.filters  README.md  imgui.ini
Assets/: Thumbs.db
Assets/Development/MaterialConfigs/: Fabric001_1K.mat_tex_cfg  Fabric006_1K.mat_tex_cfg  Fabric011_1K.mat_tex_cfg  Fabric013_1K.mat_tex_cfg
Assets/EngineModels/Base/: torus.mtl
Assets/EngineModels/SceneModels/D.Va/: DVa_E.tga  DVa_Hair_D.tga  DVa_Hair_N.tga  DVa_Hair_Sh.tga  DVa_Logo_D.tga
Assets/EngineModels/SceneModels/UnrealCharacter/: Boss_ReactionHit_B.FBX  SK_Mannequin_UE4_WithWeapon.FBX
Assets/EngineTextures/Default/: EngineDefaultBlack.tga  EngineDefaultBlue.tga  EngineDefaultBump.tga  EngineDefaultGreen.tga  EngineDefaultProperty.tga  EngineDefaultWhite.tga
Assets/EngineTextures/DefaultSkyBox/Sky_001/: Sky_001_Back.tga  Sky_001_Bottom.tga  Sky_001_Forward.tga  Sky_001_Left.tga  Sky_001_Right.tga  Sky_001_Top.tga
Assets/EngineTextures/Fabric/Fabric001_1K/: Fabric001_GLOSS_1K.tga
Assets/EngineTextures/Fabric/Fabric002_1K/: Fabric002_1K-JPG.usda  Fabric002_1K-JPG.usdc  Fabric002_1K_NormalDX.tga
Assets/EngineTextures/Fabric/Fabric003_1K/: Fabric003_COL_1K.tga  Fabric003_GLOSS_1K.tga  Fabric003_NRM_1K.tga  Fabric003_REFL_1K.tga
Assets/EngineTextures/Fabric/Fabric004_2K/: Fabric004_2K-JPG.usda
Assets/EngineTextures/Fabric/Fabric005_1K/: Fabric005_1K-JPG.usda  Fabric005_1K-JPG.usdc  Fabric005_1K_Color.tga
Assets/EngineTextures/Fabric/Fabric006_1K/: Fabric006_1K-JPG.usda  Fabric006_1K_NormalDX.tga  Fabric006_1K_Roughness.tga
Assets/EngineTextures/Fabric/Fabric007_1K/: Fabric007_1K-JPG.usda  Fabric007_1K-JPG.usdc  Fabric007_1K_Color.tga  Fabric007_1K_Roughness.tga
Assets/EngineTextures/Fabric/Fabric008_1K/: Fabric008_1K-JPG.usda  Fabric008_1K-JPG.usdc  Fabric008_1K_AmbientOcclusion.tga  Fabric008_1K_NormalDX.tga  Fabric008_1K_Roughness.tga
Assets/EngineTextures/Fabric/Fabric009_1K/: Fabric009_1K-JPG.usda  Fabric009_1K_Roughness.tga
Assets/EngineTextures/Fabric/Fabric010_1K/: Fabric010_1K-JPG.usdc  Fabric010_1K_AmbientOcclusion.tga  Fabric010_1K_Color.tga  Fabric010_1K_Roughness.tga
Assets/EngineTextures/Sky/: lutSky.tga
Assets/EngineTextures/Water/: lutWater.tga
Assets/Models/Base/: cube.mtl  sphere.mtl  sphere_smooth.mtl
Assets/Textures/: Thumbs.db
CppFiles/Base/: CBaseType.cpp  CInput.cpp  CManager.cpp  CReadFBX.cpp  CReadOBJ.cpp  CRenderDevice.cpp  CShader.cpp  CShaderManager.cpp  CTexture.cpp  CTexture2D.cpp  CTextureManager.cpp  CTimer.cpp  CimGUIManager.cpp
CppFiles/Game/: CCamera.cpp  CDeferredBuffer.cpp  CGameObjectManager.cpp  CLight.cpp  CMesh.cpp  CMeshManager.cpp  CMeshRenderer.cpp  CScene.cpp
CppFiles/Object/: CCube.cpp  CDebugScreen.cpp  CField.cpp  CGTAOComputeShader.cpp  CPlane.cpp  CPolygon.cpp  CPolygon2D.cpp  CPolygon2DBase.cpp  CRayMarching.cpp  CScreenPolygon2D.cpp  CSky.cpp  CTestModel.cpp  CWaterField.cpp
Engine/Assets/EngineShaders/: BuildHZBComputeShader.cso  EngineDefaultPS.cso  EngineDefaultVS.cso  EngineDirectLightPS.cso  EngineEmptyPS.cso  EngineGBufferResolvePS.cso  EngineGBufferWritePS.cso  EnginePostEffectExposurePS.cso  EngineScreenPolygon2DPS.cso  EngineScreenPolygon2DVS.cso  GTAODebugType.cso  GTAOSpatialFilter.cso  GTAOSpatialIntegral.cso  imGUIPS.cso  imGUIVS.cso
Engine/Configs/: BaseConfig.h.in  BaseConfig.h.ini  BasePhysicsConfig.h.in  ImGUIEngine.ini
Engine/Project/Character/: CharacterStatus.h  SlideCharacter.h
Engine/Project/Data/: TestEquipmentJson.json
Engine/Project/Equipment/: SilderEquipment.cpp  SilderEquipment.h
Engine/Project/Party/: Party.cpp
Engine/Sources/Asset/: AssetManager.cpp  AssetManager.h  BaseAsset.h
Engine/Sources/Development/: Profiler.cpp  Profiler.h
Engine/Temp/OutputShaders/: imGUIPS.cso  imGUIVS.cso
Entry/: EngineMain.cpp  EngineMain.h  MyMain.cpp  MyMain.h
HLSLCSO/: DebugPolygon2DAlpha.cso  EngineCubePS.cso  EngineCubeVS.cso  EngineDefaultPS.cso  EngineDefaultVS.cso  EngineEmptyPS.cso  EngineGBufferResolvePS.cso  EngineGBufferWritePS.cso  EnginePostEffectExposurePS.cso  EngineScreenPolygon2DPS.cso  EngineScreenPolygon2DVS.cso  FieldDeferredPS.cso  FieldFrontPS.cso  FieldPS.cso  FieldVS.cso  GBuffer.cso  Polygon2DPS.cso  Polygon2DVS.cso  PostEffect.cso  RayMarchingPS.cso  RayMarchingVS.cso  SkyPS.cso  SkyVS.cso  WaterFieldPS.cso  WaterFieldVS.cso  imGUIPS.cso  imGUIVS.cso
HLSLResources/Common/: ShaderCommon.hlsl  ShaderDefCommon.hlsl  ShaderFastMath.hlsl  ShaderFunctions.hlsl  ShaderGlobalFunctions.hlsl  ShaderNoises.hlsl  ShaderSpaceTransform.hlsl  ShaderVariables.hlsl
HLSLResources/GTAO/: GTAODebugType.hlsl
HLSLResources/Object/: DebugPolygon2DAlpha.hlsl  EngineCubePS.hlsl  EngineCubeVS.hlsl  EngineDefaultPS.hlsl  EngineDefaultVS.hlsl  EngineScreenPolygon2DVS.hlsl  FieldDeferredPS.hlsl  FieldFrontPS.hlsl  FieldPS.hlsl  FieldVS.hlsl  Polygon2DPS.hlsl  Polygon2DVS.hlsl  RayMarchingPS.hlsl  RayMarchingVS.hlsl  SkyPS.hlsl  SkyVS.hlsl  WaterFieldPS.hlsl  WaterFieldVS.hlsl
HLSLResources/RenderPipeline/: EngineGBufferResolvePS.hlsl  EnginePostEffectExposurePS.hlsl  GBuffer.hlsl  PostEffect.hlsl
HLSLResources/Test/: GTAOCS.hlsl  GTAOSpatialFilter.hlsl  GTAOSpatialIntegral.hlsl
Headers/Base/: CBaseType.h  CInput.h  CManager.h  CReadFBX.h  CReadOBJ.h  CRenderDevice.h  CShader.h  CShaderManager.h  CStructCommon.h  CTexture.h  CTimer.h  CimGUIManager.h
Headers/Game/: CCamera.h  CDeferredBuffer.h  CGameObject.h  CGameObjectManager.h  CLight.h  CMesh.h  CMeshManager.h  CMeshRenderer.h  CScene.h
Headers/Object/: CCube.h  CDebugScreen.h  CField.h  CGTAOComputeShader.h  CGameObject.h  CPlane.h  CPolygon.h  CPolygon2D.h  CPolygon2DBase.h  CRayMarching.h  CScreenPolygon2D.h  CSky.h  CTestModel.h  CWaterField.h
VolumetricCloud/CppFiles/: CVolumetricCloud.cpp
VolumetricCloud/Headers/: CVolumetricCloud.h
VolumetricClouds/CppFiles/: CVolumetricClouds.cpp
(+779 files in other folders)
